add prompt editor

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ REACT_APP_AUTO_0_DOMAIN_LOCAL = dev-w60mj1dfwvavmltl.us.auth0.com
 REACT_APP_AUTO_0_CLIENTID_LOCAL= Swvqlb6bAivMRJB8LInLEva0LtVvxpwT
 REACT_APP_AUTO_0_DOMAIN_PRODUCTION=dev-w60mj1dfwvavmltl.us.auth0.com
 # REACT_APP_AUTO_0_CLIENTID_PRODUCTION=5yOuBroYiGeRoHZ0XkHVs8G8RXbSS4eC
-# REACT_APP_API_URL=http://localhost:8000
-REACT_APP_API_URL=https://web-production-7204.up.railway.app
+REACT_APP_API_URL=http://localhost:8000
+# REACT_APP_API_URL=https://web-production-7204.up.railway.app
 REACT_APP_ALLOWED_EMAILS=moshiktm1994@gmail.com,eran.tzipel@gmail.com
