--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.30.0",
     "recharts": "^2.15.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
